Updates from Transifex
https://phabricator.endlessm.com/T27087
(cherry picked from commit eb71503ecbcd389ba95a35d15639a18982a24fea)

--- a/po/ar.po
+++ b/po/ar.po
@@ -20,7 +20,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-23 06:06+0000\n"
-"PO-Revision-Date: 2019-09-04 09:12+0000\n"
+"PO-Revision-Date: 2019-09-04 13:14+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Arabic (http://www.transifex.com/endless-os/gnome-control-center/language/ar/)\n"
 "MIME-Version: 1.0\n"
@@ -295,7 +295,7 @@ msgstr "مساحة التخزين"
 
 #: panels/applications/cc-applications-panel.ui:413
 msgid "Open in App Center"
-msgstr ""
+msgstr "فتح في مركز التطبيقات"
 
 #: panels/applications/cc-applications-panel.ui:475
 msgid ""
@@ -6265,7 +6265,7 @@ msgstr "الحالة:"
 
 #: panels/thunderbolt/cc-bolt-device-dialog.ui:174
 msgid "UUID:"
-msgstr ""
+msgstr "المعرّف الفريد عالمياً UUID:"
 
 #: panels/thunderbolt/cc-bolt-device-dialog.ui:324
 msgid "Authorize and Connect"
@@ -6288,30 +6288,30 @@ msgstr "مخوّل"
 #: panels/thunderbolt/cc-bolt-panel.c:176
 msgid ""
 "The Thunderbolt subsystem (boltd) is not installed or not set up properly."
-msgstr ""
+msgstr "إنّ النظام الفرعي لمنفذ الصاعقة وهو (boltd) غير مثبت أو لم يتم إعداده بشكل صحيح."
 
 #: panels/thunderbolt/cc-bolt-panel.c:469
 msgid ""
 "Thunderbolt could not be detected.\n"
 "Either the system lacks Thunderbolt support, it has been disabled in the BIOS or is set to an unsupported security level in the BIOS."
-msgstr ""
+msgstr "لم يتم الكشف عن \"منفذ الصاعقة\".\nإما أن النظام يفتقر إلى دعم \"منفذ الصاعقة\"، فقد تم تعطيله في \"البيوس\" أو تم ضبطه على مستوى أمان غير مدعوم في \"البيوس\"."
 
 #: panels/thunderbolt/cc-bolt-panel.c:513
 msgid "Thunderbolt support has been disabled in the BIOS."
-msgstr ""
+msgstr "تم تعطيل دعم \"منفذ الصاعقة\" في \"البيوس\"."
 
 #: panels/thunderbolt/cc-bolt-panel.c:517
 msgid "Thunderbolt security level could not be determined."
-msgstr ""
+msgstr "لا يمكن تحديد مستوى أمان منفذ الصاعقة."
 
 #: panels/thunderbolt/cc-bolt-panel.c:622
 #, c-format
 msgid "Error switching direct mode: %s"
-msgstr ""
+msgstr "خطأ أثناء التبديل للوضع المباشر: %s"
 
 #: panels/thunderbolt/cc-bolt-panel.ui:143
 msgid "No Thunderbolt support"
-msgstr ""
+msgstr "لا يوجد دعم لمنفذ الصاعقة"
 
 #: panels/thunderbolt/cc-bolt-panel.ui:246
 msgid "Direct Access"
@@ -6319,19 +6319,19 @@ msgstr "وصول مباشرة"
 
 #: panels/thunderbolt/cc-bolt-panel.ui:269
 msgid "Allow direct access to devices such as docks and external GPUs."
-msgstr ""
+msgstr "اسمح بالوصول المباشر إلى أجهزة مثل موصلات الدوك ووحدات معالجة الرسومات الخارجية."
 
 #: panels/thunderbolt/cc-bolt-panel.ui:289
 msgid "Only USB and Display Port devices can attach."
-msgstr ""
+msgstr "يمكن فقط توصيل الأجهزة ذات منفذ العرض وأجهزة يو إس بي."
 
 #: panels/thunderbolt/cc-bolt-panel.ui:397
 msgid "Pending Devices"
-msgstr ""
+msgstr "الأجهزة قيد الانتظار"
 
 #: panels/thunderbolt/cc-bolt-panel.ui:535
 msgid "No devices attached"
-msgstr ""
+msgstr "لا توجد أجهزة متصلة"
 
 #: panels/thunderbolt/gnome-thunderbolt-panel.desktop.in.in:3
 msgid "Thunderbolt"
@@ -6339,7 +6339,7 @@ msgstr "ثندربُلت"
 
 #: panels/thunderbolt/gnome-thunderbolt-panel.desktop.in.in:4
 msgid "Manage Thunderbolt devices"
-msgstr ""
+msgstr "إدارة أجهزة \"منفذ الصاعقة\""
 
 #. Translators: Do NOT translate or transliterate this text (this is an icon
 #. file name)!
@@ -6352,7 +6352,7 @@ msgstr "thunderbolt"
 #. semicolon!
 #: panels/thunderbolt/gnome-thunderbolt-panel.desktop.in.in:18
 msgid "Thunderbolt;"
-msgstr ""
+msgstr "منفذ الصاعقة؛"
 
 #. translators: the labels will read:
 #. * Cursor Size: Default
@@ -7074,7 +7074,7 @@ msgstr "ولوج ال_مؤسسات"
 #: panels/user-accounts/cc-app-permissions.c:431
 #: panels/user-accounts/cc-app-permissions.c:870
 msgid "No Restriction"
-msgstr ""
+msgstr "بدون قيود"
 
 #: panels/user-accounts/cc-app-permissions.ui:15
 msgid "Restrict Apps"
@@ -7086,18 +7086,18 @@ msgstr "امنع هذا المستخدم من فتح بعض التطبيقات."
 
 #: panels/user-accounts/cc-app-permissions.ui:78
 msgid "Restrict Web Browsers"
-msgstr ""
+msgstr "تقييد متصفحات الويب"
 
 #: panels/user-accounts/cc-app-permissions.ui:93
 msgid ""
 "Prevent this user from running web browsers by turning them off below. Note "
 "that if the computer is connected to the internet, limited web content may "
 "still be available in other applications."
-msgstr ""
+msgstr "امنع هذا المستخدم من تشغيل متصفحات الويب عن طريق إيقاف تشغيلها أدناه. لاحظ أنه إذا كان جهاز الكمبيوتر متصلاً بالإنترنت، فقد يظل محتوى الويب المحدود متاحاً في تطبيقات أخرى."
 
 #: panels/user-accounts/cc-app-permissions.ui:120
 msgid "Web _Browsers"
-msgstr ""
+msgstr "متصفحات الويب"
 
 #: panels/user-accounts/cc-app-permissions.ui:153
 msgid "App Center Restrictions"
@@ -7105,15 +7105,15 @@ msgstr "قيود مركز التطبيقات"
 
 #: panels/user-accounts/cc-app-permissions.ui:173
 msgid "App _Installation"
-msgstr ""
+msgstr "تثبيت التطبيق"
 
 #: panels/user-accounts/cc-app-permissions.ui:209
 msgid "Install Apps for All _Users"
-msgstr ""
+msgstr "تثبيت التطبيقات لجميع المستخدمين"
 
 #: panels/user-accounts/cc-app-permissions.ui:245
 msgid "Show Apps _Suitable For"
-msgstr ""
+msgstr "عرض التطبيقات المناسبة لـ"
 
 #: panels/user-accounts/cc-avatar-chooser.c:234
 msgid "Browse for more pictures"
@@ -8483,7 +8483,7 @@ msgstr "أدوات لضبط سطح مكتب جنوم"
 
 #: shell/appdata/gnome-control-center.appdata.xml.in:10
 msgid "Settings is the primary interface for configuring your system."
-msgstr ""
+msgstr "الإعدادات هي الواجهة الأساسية لتهيئة نظامك."
 
 #: shell/appdata/gnome-control-center.appdata.xml.in:20
 msgid "The GNOME Project"
@@ -8588,22 +8588,22 @@ msgstr "ألغِ البحث"
 
 #: shell/org.gnome.ControlCenter.gschema.xml:5
 msgid "The identifier for the last Settings panel to be opened"
-msgstr ""
+msgstr "يتم فتح معرف لوحة الإعدادات الأخيرة"
 
 #: shell/org.gnome.ControlCenter.gschema.xml:6
 msgid ""
 "The identifier for the last Settings panel to be opened. Unrecognised values"
 " will be ignored and the first panel in the list selected."
-msgstr ""
+msgstr "يتم فتح معرف لوحة الإعدادات الأخيرة. سيتم تجاهل القيم غير المعترف بها وتحديد اللوحة الأولى في القائمة."
 
 #: shell/org.gnome.ControlCenter.gschema.xml:13
 msgid "Show warning when running a development build of Settings"
-msgstr ""
+msgstr "إظهار التحذير عند تشغيل بنية تطوير الإعدادات"
 
 #: shell/org.gnome.ControlCenter.gschema.xml:14
 msgid ""
 "Whether Settings should show a warning when running a development build."
-msgstr ""
+msgstr "ما إذا كان يجب أن تُظهر الإعدادات تحذيراً عند تشغيل بنية التطوير."
 
 #. translators:
 #. * The number of sound outputs on a particular device
