--- a/po/es.po
+++ b/po/es.po
@@ -26,7 +26,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-23 06:06+0000\n"
-"PO-Revision-Date: 2019-08-23 06:18+0000\n"
+"PO-Revision-Date: 2019-09-04 13:30+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Spanish (http://www.transifex.com/endless-os/gnome-control-center/language/es/)\n"
 "MIME-Version: 1.0\n"
@@ -301,7 +301,7 @@ msgstr "Almacenamiento"
 
 #: panels/applications/cc-applications-panel.ui:413
 msgid "Open in App Center"
-msgstr ""
+msgstr "Abrir en App Center"
 
 #: panels/applications/cc-applications-panel.ui:475
 msgid ""
@@ -6900,7 +6900,7 @@ msgstr "Programar actualizaciones automáticas "
 
 #: panels/updates/gnome-updates-panel.desktop.in.in:6
 msgid "software-update-available"
-msgstr ""
+msgstr "software-update-available"
 
 #. Translators: those are keywords for the automatic updates control-center
 #. panel
@@ -7032,7 +7032,7 @@ msgstr "Inicio de s_esión corporativo"
 #: panels/user-accounts/cc-app-permissions.c:431
 #: panels/user-accounts/cc-app-permissions.c:870
 msgid "No Restriction"
-msgstr ""
+msgstr "Sin restricción"
 
 #: panels/user-accounts/cc-app-permissions.ui:15
 msgid "Restrict Apps"
@@ -7044,18 +7044,18 @@ msgstr "Evita que este usuario abra algunas aplicaciones."
 
 #: panels/user-accounts/cc-app-permissions.ui:78
 msgid "Restrict Web Browsers"
-msgstr ""
+msgstr "Restringir los navegadores web"
 
 #: panels/user-accounts/cc-app-permissions.ui:93
 msgid ""
 "Prevent this user from running web browsers by turning them off below. Note "
 "that if the computer is connected to the internet, limited web content may "
 "still be available in other applications."
-msgstr ""
+msgstr "Desactiva los navegadores web a continuación para evitar que este usuario pueda hacer uso de ellos. Ten en cuenta que si el ordenador está conectado a Internet, el contenido web limitado aún puede estar disponible en otras aplicaciones."
 
 #: panels/user-accounts/cc-app-permissions.ui:120
 msgid "Web _Browsers"
-msgstr ""
+msgstr "Navegadores web"
 
 #: panels/user-accounts/cc-app-permissions.ui:153
 msgid "App Center Restrictions"
@@ -7063,15 +7063,15 @@ msgstr "Restricciones del Centro de Programas"
 
 #: panels/user-accounts/cc-app-permissions.ui:173
 msgid "App _Installation"
-msgstr ""
+msgstr "_Instalación de la aplicación"
 
 #: panels/user-accounts/cc-app-permissions.ui:209
 msgid "Install Apps for All _Users"
-msgstr ""
+msgstr "Instalar las aplicaciones para todos los _usuarios"
 
 #: panels/user-accounts/cc-app-permissions.ui:245
 msgid "Show Apps _Suitable For"
-msgstr ""
+msgstr "Mostrar las aplicacione_s adecuadas para"
 
 #: panels/user-accounts/cc-avatar-chooser.c:234
 msgid "Browse for more pictures"
