--- a/po/fr.po
+++ b/po/fr.po
@@ -32,7 +32,7 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-08-23 06:06+0000\n"
-"PO-Revision-Date: 2019-08-23 06:18+0000\n"
+"PO-Revision-Date: 2019-09-04 13:29+0000\n"
 "Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: French (http://www.transifex.com/endless-os/gnome-control-center/language/fr/)\n"
 "MIME-Version: 1.0\n"
@@ -307,7 +307,7 @@ msgstr "Stockage"
 
 #: panels/applications/cc-applications-panel.ui:413
 msgid "Open in App Center"
-msgstr ""
+msgstr "Ouvrir dans l'App Center"
 
 #: panels/applications/cc-applications-panel.ui:475
 msgid ""
@@ -7038,7 +7038,7 @@ msgstr "Compte d’e_ntreprise"
 #: panels/user-accounts/cc-app-permissions.c:431
 #: panels/user-accounts/cc-app-permissions.c:870
 msgid "No Restriction"
-msgstr ""
+msgstr "Sans restriction"
 
 #: panels/user-accounts/cc-app-permissions.ui:15
 msgid "Restrict Apps"
@@ -7050,18 +7050,18 @@ msgstr "Empêchez cet utilisateur d'ouvrir certaines applications."
 
 #: panels/user-accounts/cc-app-permissions.ui:78
 msgid "Restrict Web Browsers"
-msgstr ""
+msgstr "Limiter l'accès aux navigateurs web"
 
 #: panels/user-accounts/cc-app-permissions.ui:93
 msgid ""
 "Prevent this user from running web browsers by turning them off below. Note "
 "that if the computer is connected to the internet, limited web content may "
 "still be available in other applications."
-msgstr ""
+msgstr "Empêchez cet utilisateur d'accéder aux navigateurs web en les désactivant ci-dessous. Notez que si l'ordinateur est connecté à Internet, du contenu en quantité limité peut encore être disponible depuis d'autres applications."
 
 #: panels/user-accounts/cc-app-permissions.ui:120
 msgid "Web _Browsers"
-msgstr ""
+msgstr "Navigateurs_web"
 
 #: panels/user-accounts/cc-app-permissions.ui:153
 msgid "App Center Restrictions"
@@ -7069,15 +7069,15 @@ msgstr "Restrictions du centre d'applications"
 
 #: panels/user-accounts/cc-app-permissions.ui:173
 msgid "App _Installation"
-msgstr ""
+msgstr "Installation_application"
 
 #: panels/user-accounts/cc-app-permissions.ui:209
 msgid "Install Apps for All _Users"
-msgstr ""
+msgstr "Installer des applications pour tous les _utilisateurs"
 
 #: panels/user-accounts/cc-app-permissions.ui:245
 msgid "Show Apps _Suitable For"
-msgstr ""
+msgstr "Afficher les applications adaptée_s à"
 
 #: panels/user-accounts/cc-avatar-chooser.c:234
 msgid "Browse for more pictures"
