Re-apply intentional downstream translations
These seem to be intentional changes vs. upstream, which didn't get
pulled in via the normal process because the source strings had changed.

Many of our intentional translations seem to have been moved upstream so
this patch is much smaller than in the previous iteration.

I verified that the intentional translations re-introduced in
17f7914 during a previous rebase are also reintroduced here.

https://phabricator.endlessm.com/T26907

--- a/po/bn.po
+++ b/po/bn.po
@@ -4402,29 +4402,24 @@ msgid "Power Saving"
 msgstr "বিদ্যুৎ সাশ্রয় "
 
 #: panels/power/cc-power-panel.c:1860
-#, fuzzy
 msgid "_Screen Brightness"
-msgstr "উজ্জ্বলতা"
+msgstr "_পর্দার উজ্জ্বলতা "
 
 #: panels/power/cc-power-panel.c:1881
-#, fuzzy
 msgid "Automatic Brightness"
-msgstr "স্বয়ংক্রিয় লগইন"
+msgstr "স্বয়ংক্রিয় উজ্জ্বলতা "
 
 #: panels/power/cc-power-panel.c:1894
-#, fuzzy
 msgid "_Keyboard Brightness"
-msgstr "উজ্জ্বলতা"
+msgstr "_কীবোর্ড উজ্জ্বলতা "
 
 #: panels/power/cc-power-panel.c:1905
 msgid "_Dim Screen When Inactive"
-msgstr ""
+msgstr "_পর্দা অনুজ্জ্বল হবে যখন অক্রিয় "
 
-# Translated by sadia
 #: panels/power/cc-power-panel.c:1923
-#, fuzzy
 msgid "_Blank Screen"
-msgstr "স্ক্রীন"
+msgstr "_ফাঁকা পর্দা "
 
 #: panels/power/cc-power-panel.c:1946
 msgid "_Wi-Fi"
@@ -4436,9 +4431,8 @@ msgid "Wi-Fi can be turned off to save power."
 msgstr "পাওয়ার সংরক্ষণের জন্য ঝাপসা স্ক্রীন "
 
 #: panels/power/cc-power-panel.c:1963
-#, fuzzy
 msgid "_Mobile Broadband"
-msgstr "মোবাইল ব্রডব্যান্ড"
+msgstr "_মুঠোফোন ব্রডব্যান্ড "
 
 #: panels/power/cc-power-panel.c:1964
 msgid "Mobile broadband (LTE, 4G, 3G, etc.) can be turned off to save power."
@@ -4483,9 +4477,8 @@ msgid "Suspend & Power Button"
 msgstr "স্থগিত ও বিদ্যুৎ সরবরাহ বোতাম "
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "স্বয়ংক্রিয় লগইন"
+msgstr "_স্বংক্রিয় স্থগিত "
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
