--- a/po/bn_IN.po
+++ b/po/bn_IN.po
@@ -1602,7 +1602,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "স্কেল"
@@ -4850,9 +4849,8 @@ msgid "Suspend & Power Button"
 msgstr "বিলম্বিত & পাওয়ার বন্ধ করুন"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "স্বয়ংক্রিয় বিলম্ব"
+msgstr "স্বয়ংক্রিয় বিলম্ব (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
