--- a/po/bs.po
+++ b/po/bs.po
@@ -1541,7 +1541,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "Srazmjerno"
@@ -4544,9 +4543,8 @@ msgid "Suspend & Power Button"
 msgstr "Obustavljen & Ugašen"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "Automatski Obustavi"
+msgstr "_Automatski Obustavljen"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
