--- a/po/et.po
+++ b/po/et.po
@@ -1543,7 +1543,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "Kogu pilt nähtaval"
@@ -4535,9 +4534,8 @@ msgid "Suspend & Power Button"
 msgstr "Uinak ja väljalülitamine"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "Automaatne uinak"
+msgstr "_Automaatne uinumine"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
