--- a/po/hi.po
+++ b/po/hi.po
@@ -1545,7 +1545,6 @@ msgid "Adjust for TV"
 msgstr "टीवी के लिए समायोजित करें"
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "मापक"
@@ -4434,27 +4433,22 @@ msgid "Power Saving"
 msgstr "पावर सेविंग"
 
 #: panels/power/cc-power-panel.c:1860
-#, fuzzy
 msgid "_Screen Brightness"
 msgstr "स्क्रीन चमक (_S)"
 
 #: panels/power/cc-power-panel.c:1881
-#, fuzzy
 msgid "Automatic Brightness"
-msgstr "स्वचालित रूट"
+msgstr "स्वचालित चमक"
 
 #: panels/power/cc-power-panel.c:1894
-#, fuzzy
 msgid "_Keyboard Brightness"
 msgstr "कुंजीपट चमकीलापन (_K)"
 
 #: panels/power/cc-power-panel.c:1905
-#, fuzzy
 msgid "_Dim Screen When Inactive"
 msgstr "स्क्रीन मंद करें जब निष्क्रिय हैं (_D)"
 
 #: panels/power/cc-power-panel.c:1923
-#, fuzzy
 msgid "_Blank Screen"
 msgstr "खाली स्क्रीन (_B)"
 
@@ -4517,9 +4511,8 @@ msgid "Suspend & Power Button"
 msgstr "निलंबित और पावर बटन"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "स्वत: निलंबित"
+msgstr "स्वत: निलंबित (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
@@ -8348,8 +8341,8 @@ msgid ""
 "The username should usually only consist of lower case letters from a-z, "
 "digits and the following characters: - _"
 msgstr ""
-"उपयोक्तानाम  केवल a-z अक्षर, अंकों और '.', '-' और '_' में से किसी वर्ण से मिलकर होना "
-"चाहिए."
+"उपयोक्ता नाम में केवल a-z तक के बड़े और छोटे अक्षर, अंक और निम्नलिखित वर्ण होने चाहिए: . "
+"- _"
 
 #: panels/user-accounts/user-utils.c:431
 msgid "Sorry, that user name isn’t available. Please try another."
