--- a/po/kn.po
+++ b/po/kn.po
@@ -1539,7 +1539,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "ಗಾತ್ರ ಬದಲಾವಣೆ"
@@ -4527,9 +4526,8 @@ msgid "Suspend & Power Button"
 msgstr "ಅಮಾನತುಗೊಳಿಸು ಮತ್ತು ಆಫ್ ಮಾಡು"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "ಸ್ವಯಂಚಾಲಿತ ಅಮಾನತು"
+msgstr "ಸ್ವಯಂಚಾಲಿತ ಅಮಾನತು (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
