--- a/po/oc.po
+++ b/po/oc.po
@@ -1526,7 +1526,7 @@ msgstr "Adaptar als televisors"
 #, fuzzy
 msgctxt "display setting"
 msgid "Scale"
-msgstr "Escala"
+msgstr "Redimensionat"
 
 #: panels/display/cc-night-light-page.c:622
 msgid "More Warm"
