--- a/po/or.po
+++ b/po/or.po
@@ -1547,7 +1547,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "ମାପ"
@@ -4533,9 +4532,8 @@ msgid "Suspend & Power Button"
 msgstr "ନିଲମ୍ବିତ କରନ୍ତୁ ଏବଂ ବିଦ୍ୟୁତ ପ୍ରବାହ ବନ୍ଦ କରନ୍ତୁ"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "ସ୍ବୟଂଚାଳିତ ନିଲମ୍ବନ"
+msgstr "ସ୍ବୟଂଚାଳିତ ନିଲମ୍ବନ (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
