--- a/po/sq.po
+++ b/po/sq.po
@@ -1538,7 +1538,7 @@ msgstr ""
 #: panels/display/cc-display-settings.ui:59
 msgctxt "display setting"
 msgid "Scale"
-msgstr ""
+msgstr "Shkallë"
 
 #: panels/display/cc-night-light-page.c:622
 msgid "More Warm"
