--- a/po/ta.po
+++ b/po/ta.po
@@ -1564,7 +1564,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "அளவாக்கம்"
@@ -4559,9 +4558,8 @@ msgid "Suspend & Power Button"
 msgstr "இடைநிறுத்து & அணை"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "தானியங்கு இடைநிறுத்தம்"
+msgstr "தானியங்கு இடைநிறுத்தம் (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
