--- a/po/te.po
+++ b/po/te.po
@@ -1548,7 +1548,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "స్కేల్"
@@ -4526,9 +4525,8 @@ msgid "Suspend & Power Button"
 msgstr "నిలిపివేయి మరియు విద్యుత్ ఆపు"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "స్వయంచాలక నిలుపుదల"
+msgstr "స్వయంచాలక నిలుపుదల (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
