--- a/po/as.po
+++ b/po/as.po
@@ -1542,7 +1542,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "স্কেইল"
@@ -4528,9 +4527,8 @@ msgid "Suspend & Power Button"
 msgstr "স্থগিত কৰি বন্ধ কৰক"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "স্বচালিতভাৱে স্থগিত কৰা"
+msgstr "স্বচালিতভাৱে স্থগিত কৰা (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
