--- a/po/gu.po
+++ b/po/gu.po
@@ -1589,7 +1589,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "માપ"
@@ -4584,9 +4583,8 @@ msgid "Suspend & Power Button"
 msgstr "સ્થગિત અને પાવર બંધ"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "આપમેળે સ્થગિત"
+msgstr "આપમેળે સ્થગિત (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
