--- a/po/mr.po
+++ b/po/mr.po
@@ -1536,7 +1536,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "स्केल"
@@ -4515,9 +4514,8 @@ msgid "Suspend & Power Button"
 msgstr "स्थगित करा आणि बंद करा"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "स्व स्थगित करा"
+msgstr "स्व सस्पेंड (_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
