--- a/po/tg.po
+++ b/po/tg.po
@@ -1544,7 +1544,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "Миқиёсбандӣ"
@@ -4541,9 +4540,8 @@ msgid "Suspend & Power Button"
 msgstr "Таваққуф ва анҷоми кор"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "Таваққуфи худкор"
+msgstr "_Таваққуфи худкор"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
