--- a/po/th.po
+++ b/po/th.po
@@ -1502,10 +1502,9 @@ msgid "Adjust for TV"
 msgstr "ปรับสำหรับโทรทัศน์"
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
-msgstr "ขยายพอดีหน้าจอ"
+msgstr "มาตราส่วน"
 
 #: panels/display/cc-night-light-page.c:622
 msgid "More Warm"
