--- a/po/zh_HK.po
+++ b/po/zh_HK.po
@@ -1530,7 +1530,6 @@ msgid "Adjust for TV"
 msgstr ""
 
 #: panels/display/cc-display-settings.ui:59
-#, fuzzy
 msgctxt "display setting"
 msgid "Scale"
 msgstr "縮放"
@@ -4502,9 +4501,8 @@ msgid "Suspend & Power Button"
 msgstr "暫停與關閉電源"
 
 #: panels/power/cc-power-panel.c:2307
-#, fuzzy
 msgid "_Automatic Suspend"
-msgstr "自動暫停"
+msgstr "自動暫停(_A)"
 
 #: panels/power/cc-power-panel.c:2308
 msgid "Automatic suspend"
