--- a/debian/changelog
+++ b/debian/changelog
@@ -1,26 +1,49 @@
-gnome-control-center (1:3.32.1-1endless1) unstable; urgency=medium
+gnome-control-center (1:3.34.0.1-1) experimental; urgency=medium
 
-  * Drop eos-parental-controls dependency in favour of malcontent
-    https://phabricator.endlessm.com/T26995
+  * New upstream release
+    + Fix sliders not behaving properly (LP: #1841897)
 
- -- Umang Jain <umang@endlessm.com>  Wed, 11 Jun 2019 11:07:13 +0530
+ -- Iain Lane <laney@debian.org>  Mon, 09 Sep 2019 17:11:55 +0100
 
-gnome-control-center (1:3.32.1-1endless0) unstable; urgency=medium
+gnome-control-center (1:3.33.90-1) experimental; urgency=medium
 
-  * Rebase over upstream gnome-control-center-3.32.1
-    https://phabricator.endlessm.com/T25338
-  * Endless specific changes:
-    - Remove .pkla file (from 747aa91)
-    - Specify location for our vendor overrides (from 987506c)
-    - Use dh_eoscontent to merge Endless desktop customizations (from af0c40d)
-    - Add git to build-dep (from 0626e5b)
-    - Add build dependency on eos-metrics-0-dev (from 8052c43)
-    - Add build dependency on libeos-parental-controls-0 (from 0e05dcd)
-    - Add build dependency on libmogwai-tariff-0 (from 0a833378)
-    - Add udisks2 >= 2.1.8 dependency (from 6093e02)
-    - debian: Add dependency on libflatpak (from 8e9ac9e)
+  [ Laurent Bigonville ]
+  * debian/control.in: Drop libgnomekbd-dev from the build-dependencies, this
+    is apparently not needed for quite some time already
 
- -- Umang Jain <umang@endlessm.com>  Wed, 15 May 2019 22:03:23 +0530
+  [ Iain Lane ]
+  * New upstream release
+    + Search
+      - Introduce Drag n' Drop
+      - Visual polishment
+      - Various minor improvements from the Every Detail Matters session
+      - Add shadows to application icons
+    + Background
+     - Redesigned panel
+    + Display
+     - Move Night Light to a tab, instead of a dialog
+    + Keyboard Shortcuts
+     - Panel renamed from "Keyboard"
+    + Mouse & Touchpad
+     - Reinstate keyboard navitation
+    + Power:
+     - Don't treat all batteries as laptop batteries
+    + Sharing
+      - Use a HdyLeaflet
+    + User Accounts
+      - Present the default avatar in the avatar popover
+    + Wacom
+      - Ensure calibrator UI CSS only applies to its UI
+  * control: Bump BDs per upstream
+  * 06_handle_passwd_with_ldap.patch: Drop, merged upstream
+
+ -- Iain Lane <laney@debian.org>  Mon, 19 Aug 2019 15:21:34 +0100
+
+gnome-control-center (1:3.32.2-1) experimental; urgency=medium
+
+  * New upstream release
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 29 May 2019 12:27:36 +0200
 
 gnome-control-center (1:3.32.1-1) experimental; urgency=medium
 
