--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,21 @@
+gnome-control-center (1:3.34.0.1-1endless0) unstable; urgency=medium
+
+  * Upgrade to upstream release 3.34.0.1
+  * Reapply "Remove .pkla file"
+  * Reapply "Use dh_eoscontent to merge Endless desktop customizations"
+  * Reapply "Add git to build-dep"
+  * Reapply "Add build dependency on eos-metrics-0-dev"
+  * Reapply "Add malcontent as dependency", squashing the change from
+    eos-parental-controls into malcontent in
+  * Reapply "Add udisks2 >= 2.1.8 dependency"
+  * Reapply "Add libmogwai-tariff-0 dependency"
+  * Reapply "control: Drop desktop-base dependency"
+  * Reapply "debian: Add dependency on libflatpak"
+  * Dropped the vendor config definition from debian/rules, as we no longer have
+    a vendor config file after this rebase.
+
+ -- Philip Chimento <philip@endlessm.com>  Mon, 16 Sep 2019 18:40:45 -0700
+
 gnome-control-center (1:3.34.0.1-1) experimental; urgency=medium
 
   * New upstream release
