--- a/po/fr.po
+++ b/po/fr.po
@@ -32,8 +32,8 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-03 17:24+0100\n"
-"PO-Revision-Date: 2019-10-03 16:25+0000\n"
-"Last-Translator: Roddy Shuler <roddy@stanfordalumni.org>\n"
+"PO-Revision-Date: 2019-10-05 17:02+0000\n"
+"Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: French (http://www.transifex.com/endless-os/gnome-control-center/language/fr/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1418,7 +1418,7 @@ msgstr "Mode d’affichage"
 
 #: panels/display/cc-display-panel.ui:222
 msgid "Contains task bar"
-msgstr ""
+msgstr "Contient la barre des tâches\n"
 
 #: panels/display/cc-display-panel.ui:223
 msgid "Primary Display"
@@ -1436,7 +1436,7 @@ msgstr "Disposition des écrans"
 
 #: panels/display/cc-display-panel.ui:387
 msgid "Active Display"
-msgstr ""
+msgstr "Affichage actif"
 
 #: panels/display/cc-display-panel.ui:434
 msgid "Display Configuration"
@@ -8568,13 +8568,13 @@ msgstr "Indique si Paramètres doit afficher un avertissement lors de l’utilis
 
 #: shell/org.gnome.ControlCenter.gschema.xml:20
 msgid "Directories with avatar faces"
-msgstr ""
+msgstr "Répertoires avec visages d'avatars\n"
 
 #: shell/org.gnome.ControlCenter.gschema.xml:21
 msgid ""
 "Directories to override the default avatar faces installed by gnome-control-"
 "center."
-msgstr ""
+msgstr "Répertoires pour annuler les visages par défaut des avatars installés par le centre de contrôle de GNOME.\n"
 
 #. translators:
 #. * The number of sound outputs on a particular device
