--- a/po/is.po
+++ b/po/is.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-03 17:24+0100\n"
-"PO-Revision-Date: 2019-10-03 16:25+0000\n"
-"Last-Translator: Roddy Shuler <roddy@stanfordalumni.org>\n"
+"PO-Revision-Date: 2019-10-04 13:36+0000\n"
+"Last-Translator: Will Thompson <wjt@endlessm.com>\n"
 "Language-Team: Icelandic (http://www.transifex.com/endless-os/gnome-control-center/language/is/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -6874,7 +6874,7 @@ msgstr ""
 #: panels/updates/cc-updates-panel.ui:149
 #: panels/updates/gnome-updates-panel.desktop.in.in:3
 msgid "Automatic Updates"
-msgstr ""
+msgstr "Sjálfvirkar uppfærslur"
 
 #: panels/updates/cc-updates-panel.ui:163
 msgid ""
