--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -42,8 +42,8 @@ msgstr ""
 "Project-Id-Version: gnome-control-center\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2019-10-03 17:24+0100\n"
-"PO-Revision-Date: 2019-10-03 16:25+0000\n"
-"Last-Translator: Roddy Shuler <roddy@stanfordalumni.org>\n"
+"PO-Revision-Date: 2019-10-05 10:37+0000\n"
+"Last-Translator: Leandro Stanger <leandrostanger@hotmail.com>\n"
 "Language-Team: Portuguese (Brazil) (http://www.transifex.com/endless-os/gnome-control-center/language/pt_BR/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -1428,7 +1428,7 @@ msgstr "Modo da tela"
 
 #: panels/display/cc-display-panel.ui:222
 msgid "Contains task bar"
-msgstr ""
+msgstr "Contém barra de tarefas"
 
 #: panels/display/cc-display-panel.ui:223
 msgid "Primary Display"
@@ -1446,7 +1446,7 @@ msgstr "Organização de telas"
 
 #: panels/display/cc-display-panel.ui:387
 msgid "Active Display"
-msgstr ""
+msgstr "Exibição ativa"
 
 #: panels/display/cc-display-panel.ui:434
 msgid "Display Configuration"
@@ -8578,13 +8578,13 @@ msgstr "Se Configurações deve mostrar um aviso quando estiver sendo executando
 
 #: shell/org.gnome.ControlCenter.gschema.xml:20
 msgid "Directories with avatar faces"
-msgstr ""
+msgstr "Diretórios com faces de avatar"
 
 #: shell/org.gnome.ControlCenter.gschema.xml:21
 msgid ""
 "Directories to override the default avatar faces installed by gnome-control-"
 "center."
-msgstr ""
+msgstr "Diretórios para substituir as faces de avatar padrão instaladas pelo gnome-control-center."
 
 #. translators:
 #. * The number of sound outputs on a particular device
