po: fix incorrect localization of ';'
The hints for translators do say that they shouldn't translate the
semicolons, but they have done.

I can't read Arabic so I have just fixed this with sed.

--- a/po/ar.po
+++ b/po/ar.po
@@ -2964,7 +2964,7 @@ msgstr "network-workgroup"
 #. localize the semicolons! The list MUST also end with a semicolon!
 #: panels/network/gnome-network-panel.desktop.in.in:18
 msgid "Network;IP;LAN;Proxy;WAN;Broadband;Modem;Bluetooth;vpn;DNS;"
-msgstr "الشبكة؛ عنوان الآي بي؛ بروكسي/حاسب وكيل؛ شبكة واسعة؛ نطاق عريض؛ موديم؛ بلوتوث؛ شبكة خاصة افتراضية؛ نظام أسماء الخوادم؛"
+msgstr "الشبكة; عنوان الآي بي; بروكسي/حاسب وكيل; شبكة واسعة; نطاق عريض; موديم; بلوتوث; شبكة خاصة افتراضية; نظام أسماء الخوادم;"
 
 #: panels/network/gnome-wifi-panel.desktop.in.in:4
 msgid "Control how you connect to Wi-Fi networks"
@@ -2980,7 +2980,7 @@ msgstr "network-wireless"
 #. localize the semicolons! The list MUST also end with a semicolon!
 #: panels/network/gnome-wifi-panel.desktop.in.in:18
 msgid "Network;Wireless;Wi-Fi;Wifi;IP;LAN;Broadband;DNS;Hotspot;"
-msgstr "الشبكة؛ الاتصال اللاسلكي؛ خدمة الواي فاي؛ واي فاي؛ عنوان الآي بي؛ الشبكة المحلية؛ النطاق العريض؛ أسماء النطاقات؛ نقطة الاتصال النقالة."
+msgstr "الشبكة; الاتصال اللاسلكي; خدمة الواي فاي; واي فاي; عنوان الآي بي; الشبكة المحلية; النطاق العريض; أسماء النطاقات; نقطة الاتصال النقالة;"
 
 #: panels/network/net-device-ethernet.c:123
 #: panels/network/net-device-wifi.c:399
@@ -6183,7 +6183,7 @@ msgstr "multimedia-volume-control"
 #: panels/sound/gnome-sound-panel.desktop.in.in:19
 msgid ""
 "Card;Microphone;Volume;Fade;Balance;Bluetooth;Headset;Audio;Output;Input;"
-msgstr "بطاقة؛ ميكروفون؛ حجم الصوت؛ تلاشى؛ توازن؛ بلوتوث؛ سماعات الرأس؛ صوت؛ مخرج؛ مدخل؛"
+msgstr "بطاقة; ميكروفون; حجم الصوت; تلاشى; توازن; بلوتوث; سماعات الرأس; صوت; مخرج; مدخل;"
 
 #: panels/thunderbolt/cc-bolt-device-dialog.c:94
 #: panels/thunderbolt/cc-bolt-device-entry.c:125
@@ -6363,7 +6363,7 @@ msgstr "thunderbolt"
 #. semicolon!
 #: panels/thunderbolt/gnome-thunderbolt-panel.desktop.in.in:18
 msgid "Thunderbolt;"
-msgstr "منفذ الصاعقة؛"
+msgstr "منفذ الصاعقة;"
 
 #. translators: the labels will read:
 #. * Cursor Size: Default
