--- a/debian/changelog
+++ b/debian/changelog
@@ -1,20 +1,70 @@
-gnome-control-center (1:3.34.0.1-1endless0) unstable; urgency=medium
+gnome-control-center (1:3.36.0-1) unstable; urgency=medium
 
-  * Upgrade to upstream release 3.34.0.1
-  * Reapply "Remove .pkla file"
-  * Reapply "Use dh_eoscontent to merge Endless desktop customizations"
-  * Reapply "Add git to build-dep"
-  * Reapply "Add build dependency on eos-metrics-0-dev"
-  * Reapply "Add malcontent as dependency", squashing the change from
-    eos-parental-controls into malcontent in
-  * Reapply "Add udisks2 >= 2.1.8 dependency"
-  * Reapply "Add libmogwai-tariff-0 dependency"
-  * Reapply "control: Drop desktop-base dependency"
-  * Reapply "debian: Add dependency on libflatpak"
-  * Dropped the vendor config definition from debian/rules, as we no longer have
-    a vendor config file after this rebase.
+  * New upstream release
+    - Bump the build-dependencies
+    - debian/patches/Revert-build-Bump-build-dependency-on-polkit.patch:
+      Revert the bump of the minimal polkit version, ITS files were backported
+      in earlier versions in debian
 
- -- Philip Chimento <philip@endlessm.com>  Mon, 16 Sep 2019 18:40:45 -0700
+ -- Laurent Bigonville <bigon@debian.org>  Tue, 10 Mar 2020 19:17:55 +0100
+
+gnome-control-center (1:3.35.92-1) experimental; urgency=medium
+
+  * New upstream version, update based on Ubuntu
+  * debian/control.in:
+    - updated the requirements
+  * debian/patches/01_menu_category.patch:
+    - removed, those issues are fixed in the new version
+  * debian/patches/07_polkit_wheel_sudo_group.patch:
+    - removed in favor of the new build option
+  * debian/rules:
+    - use -Dprivileged_group=sudo
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Wed, 04 Mar 2020 12:18:35 +0100
+
+gnome-control-center (1:3.34.4-1) unstable; urgency=medium
+
+  * Team upload
+  * New upstream release
+  * Bump Standards-Version to 4.5.0
+  * Wrap long lines in changelog entries: 1:2.4.0-7, 1:2.4.0-2,
+    1:2.2.2-2, 1:2.2.0-1, 1.0.51-1
+  * Set field Upstream-Name in debian/copyright
+  * Set upstream metadata fields: Bug-Database, Bug-Submit, Repository,
+    Repository-Browse
+  * Move to debhelper-compat 12
+
+ -- Simon McVittie <smcv@debian.org>  Sat, 29 Feb 2020 23:04:24 +0000
+
+gnome-control-center (1:3.34.2-1) unstable; urgency=medium
+
+  * Team upload
+
+  [ Will Thompson ]
+  * control: make -dev depend on -data, for the ITS files needed to tell
+    xgettext how to extract strings from keybinding and sound XML files
+
+  [ Simon McVittie ]
+  * d/watch: Only watch for stable-branch versions
+  * d/gbp.conf: Use upstream/3.34.x branch now that 3.35.x releases exist
+  * New upstream release
+    - Fix crash when selecting display on secondary GPU (Closes: #945375)
+
+ -- Simon McVittie <smcv@debian.org>  Tue, 10 Dec 2019 12:24:48 +0000
+
+gnome-control-center (1:3.34.1-1) unstable; urgency=medium
+
+  * New upstream release
+    - Fix crash on clicking 'Search Locations' (lp: #1846210)
+
+ -- Sebastien Bacher <seb128@ubuntu.com>  Mon, 07 Oct 2019 17:03:23 +0200
+
+gnome-control-center (1:3.34.0.1-2) unstable; urgency=medium
+
+  * Team upload.
+  * Upload to unstable
+
+ -- Andreas Henriksson <andreas@fatal.se>  Mon, 30 Sep 2019 17:48:50 +0200
 
 gnome-control-center (1:3.34.0.1-1) experimental; urgency=medium
 
@@ -2470,7 +2520,8 @@ control-center (1:2.4.0-8) unstable; urgency=low
 
 control-center (1:2.4.0-7) unstable; urgency=low
 
-  * debian/control capplets package need to depends on capplets-data (Closes: #237311)
+  * debian/control capplets package need to depends on capplets-data
+    (Closes: #237311)
 
  -- Christian Marillat <marillat@debian.org>  Thu, 11 Mar 2004 09:07:06 +0100
 
@@ -2511,7 +2562,8 @@ control-center (1:2.4.0-2) unstable; urgency=low
   * Suggest xbase-clients for xrdb
   * Rebuild to remove liblinc dependency in the -dev package (Closes: #216722)
   * Don't package .la files for modules (Closes: #182873)
-  * Run libtoolize, I don't know but something is broken in the original tarball.
+  * Run libtoolize, I don't know but something is broken in the original
+    tarball.
 
  -- Christian Marillat <marillat@debian.org>  Tue, 21 Oct 2003 21:56:55 +0200
 
@@ -2535,7 +2587,8 @@ control-center (1:2.2.2-2) unstable; urgency=low
   * debian/rules fix DEB_BUILD_OPTIONS=noopt (Closes: #199189)
   * Don't need to depends on xbase-clients
   * Suggests esound-clients (Closes: #205700)
-  * Create /usr/share/themes/metacity-1 directory to remove warning (Closes: #211182)
+  * Create /usr/share/themes/metacity-1 directory to remove warning
+    (Closes: #211182)
   * Add hack to remove libtool rpath
   * Add libxrender-dev in Builde-Depends
 
@@ -2588,7 +2641,8 @@ control-center (1:2.2.0-1) unstable; urgency=low
   * Add a default theme. Thanks to Johannes Rohr
   * Drag and drop for theme work (Closes: #166980)
   * Themes aren't sorted case-sensitively (Closes: #166981)
-  * Should fix key gnome binding properties and metacity key bindings (Closes: #172380)
+  * Should fix key gnome binding properties and metacity key bindings
+    (Closes: #172380)
 
  -- Christian Marillat <marillat@debian.org>  Thu, 23 Jan 2003 16:32:09 +0100
 
@@ -3065,7 +3119,8 @@ control-center (1.0.51-1) unstable; urgency=low
   * We've updated... (closes: bug#44136)
   * Correct xworm definition for screensaver (closes: bug#51514)
   * The libc/libglib issues are resolved now (closes: bug#37535)
-  * control-center is much more stable, and should work with window-maker (closes: bug#38706)
+  * control-center is much more stable, and should work with window-maker
+    (closes: bug#38706)
   * gnomecc seems to respect current bg color better (closes: bug#38917)
   * Couldn't reproduce this error with current versions (closes: bug#38995)
   * Invoking individual capplets seems to work now (closes: bug#39135)
