Upgrade to 3.36.0 and release 3.36.0-1endless0
https://phabricator.endlessm.com/T28833

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,18 @@
+gnome-control-center (1:3.36.0-1endless0) unstable; urgency=medium
+
+  * Upgrade to upstream release 3.36.0-1
+  * Reapply "Remove .pkla file"
+  * Reapply "Use dh_eoscontent to merge Endless desktop customizations"
+  * Reapply "Add git to build-dep"
+  * Reapply "Add build dependency on eos-metrics-0-dev"
+  * Reapply "Add malcontent as dependency"
+  * Reapply "Add udisks2 >= 2.1.8 dependency"
+  * Reapply "Add libmogwai-tariff-0 dependency"
+  * Reapply "control: Drop desktop-base dependency"
+  * Dropped "debian: Add dependency on libflatpak"
+
+ -- Umang Jain <umang@endlessm.com>  Mon, 13 Mar 2020 14:23:45 +0530
+
 gnome-control-center (1:3.36.0-1) unstable; urgency=medium
 
   * New upstream release
