--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,16 @@
+gnome-control-center (1:3.38.0-1endless0) master; urgency=medium
+
+  * New upstream release
+  * Change packaging branch to be based on the debian/master git branch in
+    Debian Salsa: https://salsa.debian.org/gnome-team/gnome-control-center
+    rather than importing tarballs
+  * Cherry-pick Endless packaging changes
+  * debian/control.in:
+    - Update malcontent version to 0.7.0
+  * debian/patches: Drop all patches (as we did when using tarballs)
+
+ -- Phaedrus Leeds <mwleeds@endlessos.org>  Wed, 16 Sep 2020 09:26:00 -0700
+
 gnome-control-center (1:3.38.0-1) experimental; urgency=medium
 
   * New upstream release
