--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+gnome-control-center (1:3.38.5-1endless0) eos; urgency=medium
+
+  * New upstream release
+  * Cherry-pick Endless packaging changes
+
+ -- Georges Basile Stavracas Neto <georges@endlessos.org>  Wed, 07 Apr 2021 17:25:10 -0300
+
 gnome-control-center (1:3.38.5-1) experimental; urgency=medium
 
   * New upstream release
