--- a/debian/changelog
+++ b/debian/changelog
@@ -1,9 +1,70 @@
-gnome-control-center (1:3.38.5-1endless0) eos; urgency=medium
+gnome-control-center (1:41.2-1) unstable; urgency=medium
 
   * New upstream release
-  * Cherry-pick Endless packaging changes
+  * Bump debhelper-compat to 13
+  * debian/rules: Drop unneeded -Wl,--as-needed
 
- -- Georges Basile Stavracas Neto <georges@endlessos.org>  Wed, 07 Apr 2021 17:25:10 -0300
+ -- Jeremy Bicha <jbicha@debian.org>  Sun, 05 Dec 2021 09:54:38 -0500
+
+gnome-control-center (1:41.1-1) unstable; urgency=medium
+
+  * Team upload
+
+  [ Jeremy Bicha ]
+  * debian/control.in: Bump minimum gnome-settings-daemon to 41,
+    for power-saver-profile-on-low-battery gsettings key
+
+  [ Simon McVittie ]
+  * New upstream release
+
+ -- Simon McVittie <smcv@debian.org>  Fri, 05 Nov 2021 19:38:16 +0000
+
+gnome-control-center (1:41.0-2) unstable; urgency=medium
+
+  * Release to unstable
+
+ -- Jeremy Bicha <jbicha@debian.org>  Tue, 28 Sep 2021 19:35:52 -0400
+
+gnome-control-center (1:41.0-1) experimental; urgency=medium
+
+  * New upstream release
+  * Refresh patches
+  * debian/control.in: Bump minimum glib to 2.68.0 & libhandy to 1.2
+  * debian/control.in: Build-Depend on libgcr-3-dev
+  * debian/control.in: Build-Depend on libxml2-utils for xmllint
+  * debian/control.in: Don't Build-Depend on libgrilo-0.3-dev & at-spi2-core
+
+ -- Jeremy Bicha <jbicha@debian.org>  Sun, 26 Sep 2021 16:46:05 -0400
+
+gnome-control-center (1:40.1-1) unstable; urgency=medium
+
+  * New upstream release
+  * Refresh patches
+
+ -- Jeremy Bicha <jbicha@debian.org>  Sat, 18 Sep 2021 07:37:48 -0400
+
+gnome-control-center (1:40.0-2) unstable; urgency=medium
+
+  * Team upload
+  * Release to unstable, part of transition #992870
+
+ -- Simon McVittie <smcv@debian.org>  Sat, 11 Sep 2021 21:32:44 +0100
+
+gnome-control-center (1:40.0-1) experimental; urgency=medium
+
+  [ Marco Trevisan (Treviño) ]
+  * New upstream release
+  * debian/control: Update dependencies to match upstream
+  * debian/control: Bump dependency on schemas 40
+  * d/p/distro-logo: Update to follow upstream changes.
+  * debian/patches: Cleanup to use gbp-pq generated names.
+    And we can avoid annoying numbered patches that doesn't make any sense
+    in the patch-queue branch.
+  * debian/control: B-D on dh-sequence-gnome (>= 0.22.2)
+    It's required for supporting new gnome versioning schema. As per this we
+    can drop the explicit --with gnome in debian/rules
+
+ -- Marco Trevisan (Treviño) <marco@ubuntu.com>  Thu, 10 Jun 2021 18:36:49 +0200
 
 gnome-control-center (1:3.38.5-1) experimental; urgency=medium
 
